# DeepLB

./: .gitignore  README.md  install_packages.R  pyproject.toml  restructure.plan.md
Predata/450K/: TCGA_Study_Abbreviations.txt
Predata/metadata/: all_WGBS_sample_metadata.xlsx  all_samples_annotation.txt  background_for_train.txt  sample_list.normal  sample_metadata.txt
Predata/tumor_purity/: BRCA_purity.csv  BRCA_sub30.txt  BRCA_top30.txt  LIHC_top30.txt
Scripts/: DeepLB_pipeline.sh
Scripts/Part1.Marker_Selection/: 1.1_prepare_sample_annotation.R  1.1_reformat_TCGA.R  1.1_subsample_for_tumorOnly.R  1.2_add_complementary_bins.py  1.2_define_blocks_according_CancerLocator_method.R  1.2_refine_blocks.sh  1.3.1_get_methylation_ratio_blocks_TCGA_paired.R  1.3.2_get_methylation_ratio_blocks_TCGA_tumorOnly.R  1.3.3_extract_reads_from_normal_plasma.sh  1.3.4_get_methylation_ratio_blocks_normal_plasma.R  1.4.1_gen_rand_runs_paired.py  1.4.1_submit_paired_PH.sh  1.4.2_gen_rand_runs_tumorOnly.py  1.4.2_submit_tumorOnly_THorMH.sh  1.5_para_est_mom_mc.R  1.5_submit_est.sh  1.6.1_sel_markers_paired.py  1.6.1_submit_sel_markers_paired.sh  1.6.2_sel_markers_tumorOnly.py  1.6.2_submit_sel_markers_tumorOnly.sh  nohup.out
Scripts/Part2.Pseudo-fragment_Generation_by_mMTS/: 2.0_prepare_files_paired.py  2.0_prepare_files_tumorOnly.py  2.1_gen_DMRref_gene_more1.py  2.2_generate_cpg_ref_beta.py  2.3_gen_dmr_reads.py  2.4_simulate_methy_improve.py  (+7 more)
deeplb/: __init__.py  cli.py  pipeline.py
docs/: manual.md
env/: part1_env.yaml  part3_env.yaml
vignettes/: quickstart.md
(+54 files in other folders)
